Some code cleaning, started refactoring methods for online use